2010-03-09  Michael Meyer <michael.meyer@intevation.de>

	* cnvts/find_service/find_service.c:
	Re-enabled "mark_unknown_svc()". This function was removed in Rev
	38. Nobody knows why. This function is very important for
	find_service*.nasl (and a few others) because they all based
	upon "Services/unknown" which are stored in KB by
	mark_unknown_svc().

2010-03-01 Stephan Kleine

	* cnvts/ssl_ciphers/ssl_ciphers.c: Changed return type of report_cat 
	from int to void to fix a no-return-in-nonvoid-function error.

2010-02-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/ntp_11.c (files_add_translation): Corrected parameter
	documentation.

2010-02-12  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/nasl_plugins.c: Removed obsolete reference from comment.

2010-02-11  Michael Wiegand <michael.wiegand@intevation.de>

	* openvas-nvt-sync.in: Removed superfluous outputs which broke the
	compatibility with openvas-administrator.

2010-02-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvas-adduser.in: exit 0 if successfull, exit 1 if no input to user
	name/login is given.

2010-02-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvas-adduser.in: Cosmetics.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/plugs_hash.c: Removed superfluous include of users.h.

2010-02-04  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/pluginload.c: Removed superfluous include of users.h.

2010-01-26  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-26  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.1 release.

	* VERSION: Set to 3.0.1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-01-26  Felix Wolfsteller <felix.wolfsteller@intevation.de>
